# TDP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: main.yml
examples/: 00_introduction.cpp  01_consumer_threads.cpp  02_producer_threads.cpp  03_pipeline_types.cpp  04_execution_policies.cpp  05_producers_with_consumers.cpp  06_smart_pointer_wrappers.cpp  07_reference_parameters.cpp  08_member_functions.cpp  09_lock_free_policies.cpp  CMakeLists.txt  README.md  example.cpp  example2.cpp  example3.cpp  example4.cpp
include/tdp/: pipeline.hpp  pipeline.impl.hpp
include/tdp/util/: blocking_queue.hpp  blocking_triple_buffer.hpp  helpers.hpp  lock_free_triple_buffer.hpp  type_list.hpp
tests/: CMakeLists.txt  test_consumers.cpp  test_exceptions.cpp  test_input_output.cpp  test_policies.cpp  test_producers.cpp
