add_executable(example example.cpp)
target_link_libraries(example ${PROJECT_NAME})

add_executable(example2 example2.cpp)
target_link_libraries(example2 ${PROJECT_NAME})

add_executable(example3 example3.cpp)
target_link_libraries(example3 ${PROJECT_NAME})

add_executable(example4 example4.cpp)
target_link_libraries(example4 ${PROJECT_NAME})